--- a/docs/report_card_template.tex
+++ b/docs/report_card_template.tex
@@ -235,8 +235,8 @@ continental shelf. Fishery observations describe a spatial gradient of
 1-6 cm mantle length (ML) squid from waters south of Hatteras through
 southern New England, with the smallest squid detected further south.
 The Gulf Stream and warm core rings may facilitate the recruitment
-transport of juvenile squid (Richardson WP),, but potential for inputs
-to the population from the South and offshore are difficult to quantify.
+transport of juvenile squid (Richardson WP), but potential for inputs to
+the population from the South and offshore are difficult to quantify.
 
 \vspace{0.25cm}
 
